--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Unauthorized Access:: Flask Blog App</title>
+    <title>Python Flask Bucket List App</title>
 
     <link href="//getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link href="//getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="/static/css/signup.css" rel="stylesheet">
+    <script src="/static/js/jquery-3.1.1.js"></script>
 
   </head>
 
@@ -14,21 +16,20 @@
     <div class="container">
       <div class="header">
         <nav>
-           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="/showSignin">Sign In</a></li>
- 	    <li role="presentation"><a href="/showSignUp">Sign Up</a></li>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active"><a href="/logout">Logout</a></li>
           </ul>
         </nav>
         <img src="/static/images/Flask_Icon.png" alt="Flask_Icon.png"/ >
       </div>
 
       <div class="jumbotron">
-        <h1>{{error}}</h1>
+        <h1>Welcome Home !!</h1>
+
       </div>
 
       <footer class="footer">
-        <p>Grace</p>
+        <p>grace</p>
       </footer>
 
     </div>
