--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,9 @@
 					<li class="nav-item">
 					    <a class="nav-link" href="/about"><i class="fas fa-user fa-fw mr-2"></i>About Me</a>
 					</li>
+					<li class="nav-item">
+					    <a class="nav-link" href="{{url_for('login')}}"><i class="fas fa-user fa-fw mr-2"></i>Login</a>
+					</li>
 				</ul>
 				
 				<div class="my-2 my-md-3">
